k8s/NetflixFrontend/deployment-netflix-frontend.yaml
# k8s/deployment-demo.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
        labels:
          app: netflix-frontend
    spec:
      containers:
      - name: server
        image: alonithuji/netflix-frontend:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
spec:
  selector:
    app: netflix-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
