k8s/NetflixFrontend/ingress.yaml
# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: royebk8s.devops-int-college.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-frontend
            port:
              number: 3000
